app/css/style.css
/* ... */
.chat-icons .text-12-gray {
  margin: 0 5px !important;
  padding: 0 !important;
  float: left !important;
  width: auto !important;
  position: relative !important;
  overflow: hidden !important;
}
.chat-icons img
{
  margin: 0 !important;
  padding: 0 !important;
  float: left !important;
  width: 22px !important;
  height: 22px !important;
  position: relative !important;
  top: 0 !important;
  bottom: 0 !important;
  left: 0 !important;
  right: 0 !important;
  overflow: hidden !important;
}
.chat-icons span
{
  margin: 13px 0px 0 5px !important;
  padding: 0 !important;
  float: left !important;
  line-height: 12px !important;
  width: auto !important;
  height: auto !important;
  position: relative !important;
  top: 0 !important;
  bottom: 0 !important;
  left: 0 !important;
  right: 0 !important;
  overflow: hidden !important;
}
.chat-icons .hand-down{margin:2px 5px 0 0 !important;float: right !important;}
.chat-icons .heart{margin: 0 7px 0 12px !important;}
.chat-icons .heart img{
  position: absolute;
  bottom: 0px;
  right: 100px;
  width: 35px !important;
  height: 35px !important;
}
.chat-icons .grey-hand-down
{
  margin: 2px 3px 0 0 !important;
  float: right !important;
}
.chat-icons .heart .text-heart{
  position: absolute;
  bottom: 0px;
  right: 70px;
}
.chat-icons .hand-down img{
  position: absolute;
  bottom: 0px;
  right: 30px;
  width: 24px;
  height: 24px;
}
.chat-icons .hand-down .text-hand-down{
  position: absolute;
  bottom: 0px;
  right: 10px;
}
.feed-img {
    text-align: left;
}
.feed-text-name {
    text-align: left;
    padding-left: 45px !important;
    font-size: 16px;
}
.feed-text-date {
    text-align: right;
    font-size: 14px;
    padding-right: 25px !important;
    color:#989898;
}
.feed-post-text {
    text-align: left;
    padding-left: 10px !important;
    padding-bottom: 10px !important;
    font-size: 16px;
    white-space: normal;
}
.text-14-gray {
    font-size:14px;
    color:#989898;
}
.text-12-gray {
    font-size:12px;
    color:#989898;
}
.text-10-gray {
    font-size:10px;
    color:#989898;
}
.black-divider {
    background-color:#2b2b2b;
    padding: 0px;
    line-height: 10px;
}

.inputForm
{
    border-radius:5px;
    -moz-border-radius:5px;
    -webkit-border-radius:5px;
    border: solid 1px #a8a8a8 !important;
    width: 100%;
    padding-left: 10px !important;
    line-height: normal;
}

/*// chat styles*/
.bar-footer {
  overflow: visible !important;
}

.bar-footer textarea {
  resize: none;
  height: 25px;
}

button.ion-android-send {
  padding-top: 2px;
}

.footer-btn-wrap {
  position: relative;
  height: 100%;
  width: 50px;
  top: 7px;
}

.footer-btn {
  position: absolute !important;
  bottom: 0;
}

img.profile-pic {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  position: absolute;
  bottom: -40px;
}

img.profile-pic.left {
  left: 10px;
}

img.profile-pic.right {
  right: 10px;
}

.ion-email {
  float: right;
  font-size: 32px;
  vertical-align: middle;
}

.message {
  font-size: 14px;
}

.message-footer{
  padding: 0px;
}

.message-detail {
  white-space: nowrap;
  font-size: 10px;
  font-style: italic;
  text-align: right;
}

.bar.item-input-inset .item-input-wrapper input {
  width: 100% !important;
  background-color: #f4f4f4 !important;
}
.item-input-wrapper textarea{
  background-color: #f4f4f4 !important;
}
.message-wrapper {
  position: relative;
}

.message-wrapper {
  margin-bottom: 40px;
}
.message-wrapper:last-child {
  margin-bottom: 10px !important;
}
.chat-side-bubble {
  border-radius: 5px;
  display: inline-block;
  padding: 10px 18px;
  position: relative;
  margin: 10px;
  max-width: 80%;
}

.chat-side-bubble:before {
  content: "\00a0";
  display: block;
  height: 16px;
  width: 9px;
  position: absolute;
  bottom: -7.5px;
}

.chat-side-bubble.left {
  background-color: #aaeeaa;
  float: left;
  margin-left: 15px;
}

.chat-side-bubble.left:before {
  background-color: #aaeeaa;
  left: 10px;
  -webkit-transform: rotate(70deg) skew(5deg);
}

.chat-side-bubble.right {
  background-color: #d1f0f8;
  color: #000;
  float: right;
  margin-right: 15px;
}

.chat-side-bubble.right:before {
  background-color: #d1f0f8;
  right: 10px;
  -webkit-transform: rotate(118deg) skew(-5deg);
}

.chat-side-bubble.right a.autolinker {
  color: #000;
  font-weight: bold;
}

.user-messages-top-icon {
  font-size: 28px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  top: -3px;
  right: 5px;
}

.msg-header-username {
  display: inline-block;
  vertical-align: middle;
  position: relative;
  top: -3px;
}

.cf {
  clear: both !important;
}

/*// end chat styles*/

.triby_image
{
    border-radius: 50% 50%;
    height: 150px;
    width: 150px;
    background-size: 100% 100%;
    margin: 0px auto;
}

.mural
{
    width: 100%;
    margin: 0px;
    padding:3px 0px 0px 8px;
    border: none;
    background: none;
}
.mural div
{
    background-position: center center;
    width: 100%;
    border-radius: 5px;
    height: 100%;
}
.mural_footer
{
  background: rgba(0, 0, 0, 0.5);
  opacity: 1;
  height: 100px;
  width: 100%;
  position: absolute;
  bottom: 0px;
}
.mural_footer .profile
{
    position: absolute;
    left:5px;
    top:5px;
    width:40px;
    height: 40px;
    border-radius: 50%;
}
.mural_footer h4
{
  position: absolute;
  top: 8px;
  left: 55px;
  color: white;
  width: 100%;
}
.mural_footer .icons
{
  margin: 0;
  padding: 0;
  float: left;
  width: 100%;
  height: 50px;
  position: relative;
  clear: both;
  color: #fff;
}
.mural_footer .icons img{
  height: 30px;
  width: 30px;
}
.mural_footer .icons span
{
  color: #fff;
  font-size: 12px;
}
.mural_footer div.hand-down
{
   position:absolute;
   left: 135px;
   bottom:5px;
}
.mural_footer img.heart
{
   position:absolute;
   left: 65px;
   bottom:2px;
   color:white;
   height:40px;
   width:40px;
}
.mural_footer .text-heart
{
   position:absolute;
   left: 107px;
   bottom:5px;
   color:white;
}
/* ... */

